Add import statement features.