@@ -24,7 +24,10 @@ subprojects {
         enableAssertions = true
         jvmArgs(
             "-ea", "--enable-preview", "-Dfile.encoding=UTF-8",
-            "-Xms512m", "-Xmx1G", "-Xss256k", "-XX:+UseZGC", "-XX:ZCollectionInterval=8",
+            "-Xms512m", "-Xmx1G", "-Xss256k",
+            "-XX:+UseZGC", "-XX:ZCollectionInterval=8",
+            "-XX:-OmitStackTraceInFastThrow",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
